modified:   index.html 	modified:   script/main.js 	modified:   script/obstacle.js 	modified:   script/rect.js 	modified:   script/scenes.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript" src="script/rect.js"></script>
     <script type="text/javascript" src="script/files.js"></script>
+    <script type="text/javascript" src="script/obstacle.js"></script>
     <script type="text/javascript" src="script/scenes.js"></script>
 </head>
 <body>
