modified:   index.html 	modified:   res/animation/hero_run.json 	modified:   script/animation.js 	modified:   script/files.js 	renamed:    script/rect.js -> script/graphics.js 	modified:   script/obstacle.js 	modified:   script/scenes.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src="script/rect.js"></script>
+    <script type="text/javascript" src="script/graphics.js"></script>
+    <script type="text/javascript" src="script/animation.js"></script>
     <script type="text/javascript" src="script/files.js"></script>
     <script type="text/javascript" src="script/obstacle.js"></script>
     <script type="text/javascript" src="script/scenes.js"></script>
