modified:   index.html 	modified:   script/animation.js 	modified:   script/graphics.js 	modified:   script/main.js 	modified:   script/obstacle.js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        canvas{
+            position: absolute;
+            left: 0px;
+            top: 0px;
+        }
+    </style>
     <script type="text/javascript" src="script/graphics.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
     <script type="text/javascript" src="script/files.js"></script>
