--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        canvas{
-            position: absolute;
-            left: 0px;
-            top: 0px;
-        }
-    </style>
+    <script type="text/javascript" src="script/activity.js"></script>
     <script type="text/javascript" src="script/graphics.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
     <script type="text/javascript" src="script/files.js"></script>
