--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width,
+     initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+
     <script type="text/javascript" src="script/activity.js"></script>
     <script type="text/javascript" src="script/graphics.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
