modified:   index.html 	modified:   script/activity.js 	modified:   script/main.js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        html, body {
+            touch-action: manipulation; /* Disable double-tap zoom */
+            touch-action: pan-x pan-y; /* Disable pinch zoom */
+        }
+    </style>
     <script type="text/javascript" src="script/activity.js"></script>
     <script type="text/javascript" src="script/graphics.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
